--- a/index.html
+++ b/index.html
@@ -556,7 +556,8 @@
         </li>
       </ul>
       <!-- Add pagination links in this section -->
-
+      <div id="pagination">
+      </div>
     </div>
     <script src="js/script.js"></script>
   </body>
